# IoToys.MediaFramerowk

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/: copilot-instructions.md
Video/: CMakeLists.txt
Video/VideoElement/: VideoElement.cpp  VideoElement.h
Video/VideoPlayer/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h
Video/VideoPlayer/Adapters/: GstAdapter.cpp  GstAdapter.h  GstAdapterContext.h  GstAdapterTypes.h
VideoElement/: CMakeLists.txt  VideoElement.h
VideoPlayer/: VideoPlayer.h
VideoPlayer/Adapters/: CMakeLists.txt  GstAdapterContext.h
common/: CMakeLists.txt  MediaControler.h  MediaDescription.h  MediaElement.h  MediaPlaylist.h
common/EventBus/: CMakeLists.txt  EventBus.h
common/adapters/: AdapterContextBase.h  CMakeLists.txt  IVideoAdapter.h  VideoAdapters.h
common/enums/: CMakeLists.txt  MediaState.h  MediaType.h
components/: CMakeLists.txt
